<resources>
    <string name="app_name">FutbolLab</string>
    <string name="entro_en_admin">Entro en admin</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_cliente">Introduce tu nombre...</string>
    <string name="apellidos_cliente">Introduce tus apellidos...</string>
    <string name="mail_cliente">Introduce tu email...</string>
    <string name="cliente_password">Introduce un password ...</string>
    <string name="confirmar_registro">Confirmar Registro</string>
    <string name="volver_atras">Volver</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="password">Password</string>
    <string name="imagen_logo">Imagen Logo</string>
    <string name="todo">TODO</string>
    <string name="cursos_disponibles">Cursos Disponibles</string>
    <string name="cursos_comprados">Cursos Comprados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_curso">Nombre del Curso</string>
    <string name="plazas_disponible">Plazas</string>
    <string name="informacion_curso">Informacion Curso</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="descripcion_del_curso">Descripcion del Curso</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="horas_totales">Horas Totales</string>
    <string name="plazas_disponibles">Plazas Disponibles</string>
    <string name="precio_del_curso">Precio del Curso</string>
    <string name="comprar">Comprar</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="asignaturas_del_curso">Asignaturas del Curso</string>
</resources>
